--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint-import-resolver-custom-alias": "^1.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
@@ -35,6 +36,7 @@
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -46,6 +48,7 @@
     "react-hot-loader": "^4.13.0",
     "source-map-loader": "^2.0.1",
     "ts-loader": "^8.0.17",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.2.2",
     "webpack": "^5.24.1",
     "webpack-bundle-analyzer": "^4.4.0",
