--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,9 @@
   "name": "it2learnserver",
   "version": "0.0.1",
   "description": "server for it2learn web page",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
+    "start": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dennis Schmock",
@@ -11,10 +12,12 @@
   "dependencies": {
     "apollo-datasource-rest": "^0.10.0",
     "apollo-server": "^2.21.0",
-    "graphql": "^15.5.0"
+    "graphql": "^15.5.0",
+    "tslint": "^6.1.3"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "typescript": "^4.2.2"
   }
 }
