added router and basic routes

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -6,7 +6,7 @@
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:import/typescript",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking"
+    "plugin:@typescript-eslint/eslint-recommended"
   ],
   "plugins": ["prettier", "@typescript-eslint", "import"],
   "parserOptions": {
@@ -29,6 +29,8 @@
     "import/no-extraneous-dependencies": 0,
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
+    "no-console": 0,
+
     "import/extensions": [
       "error",
       "ignorePackages",
