--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
     "ts-loader": "^8.0.17",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.2.2",
+    "url-loader": "^4.1.1",
     "webpack": "^5.24.1",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
