--- a/client/package.json
+++ b/client/package.json
@@ -34,9 +34,9 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-router-dom": "^5.1.7",
+    "@types/storybook-react-router": "^1.0.1",
     "@types/webpack": "^4.41.26",
     "@types/webpack-env": "^1.16.0",
-    "@types/storybook-react-router": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "babel-eslint": "^10.1.0",
@@ -54,6 +54,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^1.7.0",
     "html-webpack-plugin": "^5.2.0",
+    "json-loader": "^0.5.7",
     "prettier": "^2.2.1",
     "react-hot-loader": "^4.13.0",
     "source-map-loader": "^2.0.1",
